@@ -23,7 +23,6 @@ import org.eclipse.swt.widgets.CoolBar;
 import org.eclipse.swt.widgets.CoolItem;
 import org.eclipse.swt.widgets.Display;
 
-// TODO: Auto-generated Javadoc
 /**
  * Utility class for managing OS resources associated with SWT controls such as colors, fonts,
  * images, etc.
@@ -384,10 +383,10 @@ public class SWTResourceManager {
                     Object logFont = FontData.class.getField("data").get(fontData); //$NON-NLS-1$
                     if (logFont != null && logFontClass != null) {
                         if (strikeout) {
-                            logFontClass.getField("lfStrikeOut").set(logFont, new Byte((byte) 1)); //$NON-NLS-1$
+                            logFontClass.getField("lfStrikeOut").set(logFont, Byte.valueOf((byte) 1)); //$NON-NLS-1$
                         }
                         if (underline) {
-                            logFontClass.getField("lfUnderline").set(logFont, new Byte((byte) 1)); //$NON-NLS-1$
+                            logFontClass.getField("lfUnderline").set(logFont, Byte.valueOf((byte) 1)); //$NON-NLS-1$
                         }
                     }
                 } catch (Throwable e) {
@@ -478,7 +477,7 @@ public class SWTResourceManager {
      * @return Cursor The system cursor matching the specific ID
      */
     public static Cursor getCursor(int id) {
-        Integer key = new Integer(id);
+        Integer key = Integer.valueOf(id);
         Cursor cursor = m_IdToCursorMap.get(key);
         if (cursor == null) {
             cursor = new Cursor(Display.getDefault(), id);
